worked on background and added ui-view to create

--- a/src/scripts/home/views/home.html
+++ b/src/scripts/home/views/home.html
@@ -11,7 +11,7 @@
         <section id="nav" layout="row" layout-align="end center">
           <div id="search" layout="row" layout-align="end end" ng-class="{expanded: navCtrl.searchFocus}">
             <md-button aria-label="search" ng-click="navCtrl.toggleSearch()">
-              <i class="mdi mdi-magnify mdi-2x"></i>
+              <i class="mdi mdi-magnify mdi-lg"></i>
             </md-button>
             <md-input-container ng-if="navCtrl.searchFocus" layout="row">
 
@@ -24,11 +24,11 @@
             </div>
           </div>
           <div id="filters" layout="row" layout-align="end end" ng-class="{expanded: navCtrl.searchFocus}">
-            <md-button aria-label="search" ng-click="navCtrl.toggleRight()"><i class="mdi mdi-filter-variant mdi-2x"></i>
+            <md-button aria-label="search" ng-click="navCtrl.toggleRight()"><i class="mdi mdi-filter-variant mdi-lg"></i>
             </md-button>
           </div>
           <div id="options" layout="row" layout-align="end end" ng-class="{expanded: navCtrl.searchFocus}">
-            <md-button aria-label="search" ng-click="navCtrl.toggleOptions()"><i class="mdi mdi-dots-vertical mdi-2x"></i>
+            <md-button aria-label="search" ng-click="navCtrl.toggleOptions()"><i class="mdi mdi-dots-vertical mdi-lg"></i>
             </md-button>
           </div>
         </section>
