worked on post forms

--- a/src/scripts/home/views/create/article.html
+++ b/src/scripts/home/views/create/article.html
@@ -1,4 +1,4 @@
-<md-content class="md-padding dark" layout-fill layout="column" layout-gt-md="row">
+<md-content class="md-padding dark form-container" layout-fill layout="column" layout-gt-md="row">
 
   <h1 hide>{{createCtrl.currentPost}}</h1>
   <span ng-if="!createCtrl.entry" flex-gt-md="33" hide-sm hide-md></span>
@@ -44,22 +44,55 @@
 
     </md-content>
     <span flex></span>
-    <md-toobar>
-      <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-        <md-button aria-label="create extras" ng-click=""><i class="mdi mdi-lg mdi-tag"></i>
-        </md-button>
-        <md-button aria-label="create extras" ng-click=""><i class="mdi mdi-lg mdi-clock"></i>
-        </md-button>
-        <md-button aria-label="create extras" ng-click=""><i class="mdi mdi-lg mdi-account-multiple"></i>
-        </md-button>
-        <md-button aria-label="create extras" ng-click="" hide><i class="mdi mdi-lg mdi-map-marker"></i>
-        </md-button>
-        <md-button aria-label="create extras" ng-click=""><i class="mdi mdi-lg mdi-map-marker"></i>
-        </md-button>
-        <span flex flex-gt-md="33"></span>
-        <md-button aria-label="save " class="md-raised md-primary " ng-click="createCtrl.post(createCtrl.entry) ">save</md-button>
-      </div>
-    </md-toobar>
+    <md-tabs class="options-tabs">
+      <md-tab>
+        <md-tab-label><i class="mdi mdi-lg mdi-tag"></i>
+        </md-tab-label>
+        <div>
+          <md-content class="md-padding">
+            <h3 class="options-form">Tags</h3>
+          </md-content>
+        </div>
+      </md-tab>
+      <md-tab>
+        <md-tab-label><i class="mdi mdi-lg mdi-clock"></i>
+        </md-tab-label>
+        <div>
+          <md-content class="md-padding">
+            <h3 class="options-form">Time</h3>
+          </md-content>
+        </div>
+      </md-tab>
+      <md-tab>
+        <md-tab-label><i class="mdi mdi-lg mdi-account-multiple"></i>
+        </md-tab-label>
+        <div>
+          <md-content class="md-padding">
+            <h3 class="options-form">People</h3>
+          </md-content>
+        </div>
+      </md-tab>
+      <md-tab>
+        <md-tab-label><i class="mdi mdi-lg mdi-map-marker"></i>
+        </md-tab-label>
+        <div>
+          <md-content class="md-padding">
+            <h3 class="options-form">Location</h3>
+          </md-content>
+        </div>
+      </md-tab>
+      <md-tab>
+        <md-tab-label><i class="mdi mdi-lg mdi-clock"></i>
+        </md-tab-label>
+        <div>
+          <md-content class="md-padding">
+            <h3 class="options-form">Time</h3>
+          </md-content>
+        </div>
+      </md-tab>
+    </md-tabs>
+
+    <md-button aria-label="save " class="md-raised md-warn " ng-click="createCtrl.post(createCtrl.entry) ">save</md-button>
   </md-card>
   <span ng-if="!createCtrl.entry" flex-gt-md="33" hide-sm hide-md></span>
   <md-card ng-if="createCtrl.entry" flex flex-gt-md="66">
