--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -118,6 +118,10 @@ button.side-nav {
     }
   }
 }
+//form-container
+h3.options-form {
+  margin-top: 0;
+}
 //masonry
 .grid-sizer.item {
   height: 0;
