testing fixed ui-view

--- a/src/scripts/home/views/create/article.html
+++ b/src/scripts/home/views/create/article.html
@@ -51,6 +51,7 @@
         <div>
           <md-content class="md-padding">
             <h3 class="options-form">Tags</h3>
+            <p>This is for adding tags to the post</p>
           </md-content>
         </div>
       </md-tab>
@@ -60,6 +61,7 @@
         <div>
           <md-content class="md-padding">
             <h3 class="options-form">Time</h3>
+            <p>This for adding in times and dates</p>
           </md-content>
         </div>
       </md-tab>
@@ -69,6 +71,7 @@
         <div>
           <md-content class="md-padding">
             <h3 class="options-form">People</h3>
+            <p>This is for adding users/people that have already posted, or even an email address that will send an email??</p>
           </md-content>
         </div>
       </md-tab>
@@ -78,18 +81,11 @@
         <div>
           <md-content class="md-padding">
             <h3 class="options-form">Location</h3>
+            <p>this is for adding a location to the post</p>
           </md-content>
         </div>
       </md-tab>
-      <md-tab>
-        <md-tab-label><i class="mdi mdi-lg mdi-clock"></i>
-        </md-tab-label>
-        <div>
-          <md-content class="md-padding">
-            <h3 class="options-form">Time</h3>
-          </md-content>
-        </div>
-      </md-tab>
+
     </md-tabs>
 
     <md-button aria-label="save " class="md-raised md-warn " ng-click="createCtrl.post(createCtrl.entry) ">save</md-button>
