working on firebase array and md-tooltip

--- a/src/scripts/home/views/create.html
+++ b/src/scripts/home/views/create.html
@@ -1,14 +1,19 @@
 <md-toolbar class="md-accent">
   <div class="md-toolbar-tools" layout="row" layout-align="space-around center">
     <md-button aria-label="entry type select" ui-sref="home.create.story" ng-click="menu.story = !menu.story"><i class="mdi mdi-border-color mdi-lg"></i>
+      <md-tooltip>Story</md-tooltip>
     </md-button>
     <md-button aria-label="entry type select" ui-sref="home.create.image" ng-click="menu.image = !menu.image"><i class="mdi mdi-file-image mdi-lg"></i>
+      <md-tooltip>Image</md-tooltip>
     </md-button>
     <md-button aria-label="entry type select" ui-sref="home.create.video" ng-click="menu.video = !menu.video"><i class="mdi mdi-youtube-play mdi-lg"></i>
+      <md-tooltip>Video</md-tooltip>
     </md-button>
     <md-button aria-label="entry type select" ui-sref="home.create.article" ng-click="menu.article = !menu.article"><i class="mdi mdi-newspaper mdi-lg"></i>
+      <md-tooltip>Article</md-tooltip>
     </md-button>
     <md-button aria-label="entry type select" ui-sref="home.create.recipe" ng-click="menu.place = !menu.place"><i class="mdi mdi-silverware mdi-lg"></i>
+      <md-tooltip>Recipe</md-tooltip>
     </md-button>
 
   </div>
