--- a/src/scripts/home/views/home.html
+++ b/src/scripts/home/views/home.html
@@ -44,7 +44,8 @@
     </md-content>
 
   </section>
-  <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right" md-is-locked-open="$media('gt-md')">
+  <md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
+    <!--  md-is-locked-open="$media('gt-md')" -->
     <section id="filter-menu" ng-controller="main.home.sidenav as filterCtrl">
 
       <md-toolbar>
