--- a/src/scripts/home/views/create/article.html
+++ b/src/scripts/home/views/create/article.html
@@ -47,6 +47,7 @@
     <md-tabs class="options-tabs">
       <md-tab>
         <md-tab-label><i class="mdi mdi-lg mdi-tag"></i>
+          <md-tooltip>Tags</md-tooltip>
         </md-tab-label>
         <div>
           <md-content class="md-padding">
@@ -56,7 +57,8 @@
         </div>
       </md-tab>
       <md-tab>
-        <md-tab-label><i class="mdi mdi-lg mdi-clock"></i>
+        <md-tab-label>
+          <md-tooltip>Time</md-tooltip><i class="mdi mdi-lg mdi-clock"></i>
         </md-tab-label>
         <div>
           <md-content class="md-padding">
@@ -67,6 +69,7 @@
       </md-tab>
       <md-tab>
         <md-tab-label><i class="mdi mdi-lg mdi-account-multiple"></i>
+          <md-tooltip>People</md-tooltip>
         </md-tab-label>
         <div>
           <md-content class="md-padding">
@@ -77,6 +80,7 @@
       </md-tab>
       <md-tab>
         <md-tab-label><i class="mdi mdi-lg mdi-map-marker"></i>
+          <md-tooltip>Places</md-tooltip>
         </md-tab-label>
         <div>
           <md-content class="md-padding">
