--- a/src/scripts/home/views/home.html
+++ b/src/scripts/home/views/home.html
@@ -1,6 +1,6 @@
 <section layout="row" layout-fill class="group">
   <section layout="column" layout-fill>
-    <md-toolbar ng-controller="main.home.nav as navCtrl" ng-class="{fixed: scrollUp}" md-scroll-shrink>
+    <md-toolbar ng-controller="main.home.nav as navCtrl" ng-class="{fixed: scrollUp}">
       <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
         <div layout="row" class="nav-bar-title" ng-class="{expanded: navCtrl.searchFocus}">
           <md-button aria-label="menu button" ng-click="navCtrl.test()">
