--- a/src/scripts/home/views/feedtest.html
+++ b/src/scripts/home/views/feedtest.html
@@ -1,58 +1,103 @@
-<md-content class="md-padding" style="background-color:red" layout=row>
+<md-content class="md-padding" style="background-color: rgba(200,200,200,0.9)" layout=row>
 
   <section id="feed" flex>
 
     <div ng-controller="main.home.feed as feedCtrl" layout="row" layout-fill>
 
-      <md-content class="md-padding" layout-fill>
+      <md-grid-list layout-fill md-cols-gt-md="12" md-cols-sm="3" md-cols-md="8" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter-gt-md="16px" md-gutter-gt-sm="8px" md-gutter="4px">
+        <md-grid-tile ng-repeat-start="(key, entry) in feedCtrl.feed" md-colspan-gt-sm="4" md-rowspan-gt-sm="5" ng-if="$first">
 
-        <md-grid-list layout-fill md-cols-gt-md="12" md-cols-sm="3" md-cols-md="8" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter-gt-md="16px" md-gutter-gt-sm="8px" md-gutter="4px">
-          <md-grid-tile ng-repeat="(key, entry) in feedCtrl.feed" md-colspan-gt-sm="3" md-rowspan-gt-sm="3">
-            <div layout="column" layout-fill flex>
+          <md-card class="tile-content" layout="column">
 
-              <md-toolbar>
-                <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-                  <md-button aria-label="toolbar button" ng-href="{{entry.url}}" layout="row" layout-align="center center">
-                    <img class="img-responsive" alt="url icon" ng-src="{{entry.favicon_url}}" height="20" width="20" style="width:20px;" ng-if="entry.favicon_url">
+            <md-toolbar>
+              <div class="md-toolbar-tools " layout="row " layout-align="space-between center ">
+                <md-button aria-label="toolbar button " ng-href="{{entry.url}} " layout="row " layout-align="center center ">
+                  <img class="img-responsive " alt="url icon " ng-src="{{entry.favicon_url}} " height="20 " width="20 " style="width:20px; " ng-if="entry.favicon_url ">
 
-                  </md-button>
-                  <span flex></span>
-                  <md-button aria-label="share" ng-href="{{entry.url}}"><i class="mdi mdi-share mdi-lg"></i>
-                  </md-button>
-                  <md-button aria-label="share" ng-href="{{entry.url}}"><i class="mdi mdi-share-variant mdi-lg"></i>
-                  </md-button>
-                  <md-button aria-label="extras" ng-click="feedCtrl.deleteEntry(key)"><i class="mdi mdi-lg mdi-dots-vertical"></i>
-                  </md-button>
-                </div>
-              </md-toolbar>
-              <img class="img-responsive" ng-src="{{entry.mainImage.url}}" alt="header image" ng-if="entry.mainImage && !entry.media">
-              <div class="video-frame" ng-if="entry.media">
-                <em-embed urlsearch="{{entry.url}}">
-                </em-embed>
+                </md-button>
+                <span flex></span>
+                <md-button aria-label="share " ng-href="{{entry.url}} "><i class="mdi mdi-share mdi-lg "></i>
+                </md-button>
+                <md-button aria-label="share " ng-href="{{entry.url}} "><i class="mdi mdi-share-variant mdi-lg "></i>
+                </md-button>
+                <md-button aria-label="extras " ng-click="feedCtrl.deleteEntry(key) "><i class="mdi mdi-lg mdi-dots-vertical "></i>
+                </md-button>
               </div>
-              <md-content class="md-padding">
-                <h3>{{entry.title}}</h3>
-                <p>
-                  {{entry.description}}
-                </p>
-              </md-content>
-              <md-toolbar>
-                <div class="md-toolbar-tools" layout="row" layout-align="space-between center">
-                  <md-button aria-label="bottom toolbar button" ng-click=""><i class="mdi mdi-lg mdi-tag"></i>
-                  </md-button>
-                  <md-button aria-label="bottom toolbar button" ng-click=""><i class="mdi mdi-lg mdi-comment-text-outline"></i>
-                  </md-button>
-
-                  <span flex></span>
-                  <md-button aria-label="bottom toolbar button" ng-click=""><i class="mdi mdi-lg mdi-heart-outline"></i>
-                  </md-button>
-
-                </div>
-              </md-toolbar>
+            </md-toolbar>
+            <img class="img-responsive " ng-src="{{entry.mainImage.url}} " alt="header image " ng-if="entry.mainImage && !entry.media ">
+            <div class="video-frame " ng-if="entry.media ">
+              <em-embed urlsearch="{{entry.url}} ">
+              </em-embed>
             </div>
-          </md-grid-tile>
-        </md-grid-list>
-      </md-content>
+            <md-content class="md-padding">
+              <h3>{{entry.title}}</h3>
+              <p>
+                {{entry.description}}
+              </p>
+            </md-content>
+            <md-toolbar>
+              <div class="md-toolbar-tools " layout="row " layout-align="space-between center ">
+                <md-button aria-label="bottom toolbar button " ng-click=" "><i class="mdi mdi-lg mdi-tag "></i>
+                </md-button>
+                <md-button aria-label="bottom toolbar button " ng-click=" "><i class="mdi mdi-lg mdi-comment-text-outline "></i>
+                </md-button>
+
+                <span flex></span>
+                <md-button aria-label="bottom toolbar button " ng-click=" "><i class="mdi mdi-lg mdi-heart-outline "></i>
+                </md-button>
+
+              </div>
+            </md-toolbar>
+          </md-card>
+        </md-grid-tile>
+
+        <md-grid-tile ng-repeat-end="(key, entry) in feedCtrl.feed" md-colspan-gt-sm="2" md-rowspan-gt-sm="3" ng-if="!$first">
+
+          <md-card class="tile-content" layout="column">
+
+            <md-toolbar>
+              <div class="md-toolbar-tools " layout="row " layout-align="space-between center ">
+                <md-button aria-label="toolbar button " ng-href="{{entry.url}} " layout="row " layout-align="center center ">
+                  <img class="img-responsive " alt="url icon " ng-src="{{entry.favicon_url}} " height="20 " width="20 " style="width:20px; " ng-if="entry.favicon_url ">
+
+                </md-button>
+                <span flex></span>
+                <md-button aria-label="share " ng-href="{{entry.url}} "><i class="mdi mdi-share mdi-lg "></i>
+                </md-button>
+                <md-button aria-label="share " ng-href="{{entry.url}} "><i class="mdi mdi-share-variant mdi-lg "></i>
+                </md-button>
+                <md-button aria-label="extras " ng-click="feedCtrl.deleteEntry(key) "><i class="mdi mdi-lg mdi-dots-vertical "></i>
+                </md-button>
+              </div>
+            </md-toolbar>
+            <img class="img-responsive " ng-src="{{entry.mainImage.url}} " alt="header image " ng-if="entry.mainImage && !entry.media ">
+            <div class="video-frame " ng-if="entry.media ">
+              <em-embed urlsearch="{{entry.url}} ">
+              </em-embed>
+            </div>
+            <md-content class="md-padding">
+              <h3 class="ellipsis">{{entry.title}}</h3>
+              <p class="ellipsis">
+                {{entry.description}}
+              </p>
+            </md-content>
+            <md-toolbar>
+              <div class="md-toolbar-tools " layout="row " layout-align="space-between center ">
+                <md-button aria-label="bottom toolbar button " ng-click=" "><i class="mdi mdi-lg mdi-tag "></i>
+                </md-button>
+                <md-button aria-label="bottom toolbar button " ng-click=" "><i class="mdi mdi-lg mdi-comment-text-outline "></i>
+                </md-button>
+
+                <span flex></span>
+                <md-button aria-label="bottom toolbar button " ng-click=" "><i class="mdi mdi-lg mdi-heart-outline "></i>
+                </md-button>
+
+              </div>
+            </md-toolbar>
+          </md-card>
+        </md-grid-tile>
+      </md-grid-list>
+
     </div>
 
   </section>
